adding categorias styles, img, body and h1,h2,h3 global classes

--- a/01-ecommerce/index.html
+++ b/01-ecommerce/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair:wght@700&family=Raleway:wght@400;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
     <title>Ecommerce - Home</title>
@@ -28,21 +32,23 @@
 
     <div class="hero"></div>
 
-    <section>
+    <section class="contenedor categorias">
         <h2>Categorías de Productos</h2>
 
-        <div>
-            <img src="img/categoria1.jpg" alt="Categoria 1" />
-            <a href="#">Oficina</a>
-        </div>
+        <div class="listado-categorias">
+            <div class="categoria">
+                <img src="img/categoria1.jpg" alt="Categoria 1" />
+                <a href="#">Oficina</a>
+            </div>
 
-        <div>
-            <img src="img/categoria2.jpg" alt="Categoria 2" />
-            <a href="#">Cocina</a>
-        </div>
-        <div>
-            <img src="img/categoria3.jpg" alt="Categoria 3" />
-            <a href="#">Sala</a>
+            <div class="categoria">
+                <img src="img/categoria2.jpg" alt="Categoria 2" />
+                <a href="#">Cocina</a>
+            </div>
+            <divm class="categoria">
+                <img src="img/categoria3.jpg" alt="Categoria 3" />
+                <a href="#">Sala</a>
+            </divm>
         </div>
     </section>
 
